--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <canvas id="canvas1"></canvas>
 
+    <img src="assets/player.png" id="player" class="preload">
+
     <script type="module" src="main.js"></script>
 
 </body>
