background paralax and game speed

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <canvas id="canvas1"></canvas>
 
     <img src="assets/player.png" id="player" class="preload">
+    <img src="assets/layer-1.png" id="layer1" class="preload">
+    <img src="assets/layer-2.png" id="layer2" class="preload">
+    <img src="assets/layer-3.png" id="layer3" class="preload">
+    <img src="assets/layer-4.png" id="layer4" class="preload">
+    <img src="assets/layer-5.png" id="layer5" class="preload">
 
     <script type="module" src="main.js"></script>
 
