enemy class, assets and movement

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <img src="assets/layer-4.png" id="layer4" class="preload">
     <img src="assets/layer-5.png" id="layer5" class="preload">
 
+    <img src="assets/enemy_fly.png" id="enemy_fly" class="preload">
+    <img src="assets/enemy_plant.png" id="enemy_plant" class="preload">
+    <img src="assets/enemy_spider_big.png" id="enemy_spider_big" class="preload">
+
     <script type="module" src="main.js"></script>
 
 </body>
