--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <img src="assets/enemy_plant.png" id="enemy_plant" class="preload">
     <img src="assets/enemy_spider_big.png" id="enemy_spider_big" class="preload">
 
+    <img src="assets/fire.png" id="fire" class="preload">
+
     <script type="module" src="main.js"></script>
 
 </body>
