--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <img src="assets/enemy_spider_big.png" id="enemy_spider_big" class="preload">
 
     <img src="assets/fire.png" id="fire" class="preload">
+    <img src="assets/boom.png" id="collisionAnimation" class="preload">
 
     <script type="module" src="main.js"></script>
 
