--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <img src="assets/fire.png" id="fire" class="preload">
     <img src="assets/boom.png" id="collisionAnimation" class="preload">
 
+    <img src="assets/lives.png" id="lives" class="preload">
+
     <script type="module" src="main.js"></script>
 
 </body>
